# rust-duplicate-file-detector

./: Cargo.toml  README.md  build.rs  duplicate.txt
.bash_completion.d/: duplicate-checker.bash
.github/workflows/: ci.yml  publish.yml
.zfunc/: _duplicate-checker
src/: cmd_handler.rs  duplicate_check.rs  lib.rs  main.rs  print.rs
