[package]
name = "duplicate-checker"
version = "2.0.1"
edition = "2021"
description = "A duplicate file checker"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
futures = "0.3.30"
ring = "0.17.8"
data-encoding = "2.6.0"
fuzzy-matcher = "0.3.7"
colored = "2.1.0"
spinners = "4.1.1"
clap = { version = "4.5.11", features = ["derive"] }
tokio = { version = "1.39.2", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "io-std",
    "io-util",
    "fs",
] }
